--- a/src/views/personal.html
+++ b/src/views/personal.html
@@ -11,7 +11,7 @@
       font-family: Tahoma, Verdana, Arial, sans-serif;
     }
   </style>
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="jquery.js"></script>
 
   <script>
     $(function () {
