--- a/src/views/password2.html
+++ b/src/views/password2.html
@@ -15,20 +15,15 @@
 
   <script>
     $(function () {
-      console.log(localStorage.getItem('islogin'));
-      if (localStorage.getItem('islogin') && localStorage.getItem('islogin') == true) {
-        console.log("已经登录");
-        $("#username").text(localStorage.getItem("username"));
-      }
-      else {
-        alert("还未登录");
-        $(location).attr("href", "login");
-      }
-
+      console.log("修改密码页面");
+      $('#username').text(localStorage.getItem('username'));
       $("#logout").click(function () {
-        localStorage.removeItem('username');
-        localStorage.removeItem('role');
-        localStorage.setItem('islogin', 0);
+        localStorage.clear();
+        $.ajax({
+          url: "http://localhost:3000/getLogout",
+          type: "get",
+          contentType: 'application/json'
+        })
       })
     })
 
@@ -69,9 +64,6 @@
         alert("新密码中缺少特殊字符");
         return;
       }
-      else {
-        alert("通过");
-      }
       $.ajax({
         url: "http://localhost:3000/changePassword",
         type: "post",
@@ -84,7 +76,9 @@
         success: function (data) {
           console.log(data);
           if (data.msg == 'success') {
-            $(location).attr('herf', 'index');
+            console.log("去主页面");
+            alert('修改成功');
+            $(location).attr("href", "index");
           }
           else if (data.msg == 'password error') {
             alert("密码错误");
