--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,22 +10,16 @@
 
   <script>
     $(function () {
-      console.log(localStorage.getItem('islogin'));
-      if (localStorage.getItem('islogin') && localStorage.getItem('islogin') == true) {
-        console.log("已经登录");
-        $("#username").text(localStorage.getItem("username"));
-      }
-      else {
-        alert("还未登录");
-        $(location).attr("href", "login");
-      }
+      console.log("主页面");
 
       $("#username").text(localStorage.getItem('username'));
       $("#role").text(localStorage.getItem('role'));
       $("#logout").click(function () {
-        localStorage.removeItem('username');
-        localStorage.removeItem('role');
-        localStorage.setItem('islogin', 0);
+        localStorage.clear();
+        $.ajax({
+          url: "http://localhost:3000/getLogout",
+          type: "get",
+        })
       })
     });
   </script>
@@ -35,8 +29,8 @@
   <div id="left" style="width:15%; height:500px; float:left;">
     <table align="left" width="85%" border="0" cellpadding="0" cellspacing="0">
       <left>
-        <ul id="leftmenu"><br><br>考试系统<li><a href="index">主页</a></li>
-          <li><a href="personal">修改密码</a></li>
+        <ul id="leftmenu"><br><br>考试系统<li><a href="#">主页</a></li>
+          <li><a href="password">修改密码</a></li>
           <li id="logout"><a href="login">退出</a></li>
         </ul>
       </left>
