--- a/src/views/login.html
+++ b/src/views/login.html
@@ -10,7 +10,7 @@
       font-family: Tahoma, Verdana, Arial, sans-serif;
     }
   </style>
-  <script src="libs/jquery.js"></script>
+  <script type="text/javascript" src="libs/jquery.js"></script>
 
   <script>
     $(function () {
