--- a/src/views/password1.html
+++ b/src/views/password1.html
@@ -11,7 +11,7 @@
       font-family: Tahoma, Verdana, Arial, sans-serif;
     }
   </style>
-  <script src="jquery.js"></script>
+  <script type="text/javascript" src="libs/jquery.js"></script>
 
   <script>
     $(function () {
@@ -23,11 +23,6 @@
       var oldpassword = $("#oldpassword").val();
       var newpassword1 = $("#newpassword1").val();
       var newpassword2 = $("#newpassword2").val();
-
-      console.log(oldpassword);
-      console.log(newpassword1);
-      console.log(newpassword2);
-
       var flag1 = new RegExp("\\d+");
       var flag2 = new RegExp("[a-zA-Z]+");
       var flag3 = new RegExp("[`~!@#$^&*()=|{}':;',\\[\\].<>¡¶¡·/?~£¡@#£¤¡­¡­&*£¨£©¨D¨D|{}¡¾¡¿¡®£»£º¡±¡°'¡££¬¡¢£¿ ]");
