--- a/src/views/password2.html
+++ b/src/views/password2.html
@@ -11,7 +11,7 @@
       font-family: Tahoma, Verdana, Arial, sans-serif;
     }
   </style>
-  <script src="libs/jquery.js"></script>
+  <script type="text/javascript" src="libs/jquery.js"></script>
 
   <script>
     $(function () {
@@ -31,11 +31,6 @@
       var oldpassword = $("#oldpassword").val();
       var newpassword1 = $("#newpassword1").val();
       var newpassword2 = $("#newpassword2").val();
-
-      console.log(oldpassword);
-      console.log(newpassword1);
-      console.log(newpassword2);
-
       var flag1 = new RegExp("\\d+");
       var flag2 = new RegExp("[a-zA-Z]+");
       var flag3 = new RegExp("[`~!@#$^&*()=|{}':;',\\[\\].<>《》/?~！@#￥……&*（）――|{}【】‘；：”“'。，、？ ]");
@@ -99,7 +94,7 @@
     <table align="left" width="85%" border="0" cellpadding="0" cellspacing="0">
       <left>
         <ul id="leftmenu"><br><br>考试系统<li><a href="index">主页</a></li>
-          <li><a href="personal">修改密码</a></li>
+          <li><a href="password">修改密码</a></li>
           <li id="logout"><a href="login">退出</a></li>
         </ul>
       </left>
