--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>主页</title>
-  <script src="jquery.js"></script>
+  <script type="text/javascript" src="libs/jquery.js"></script>
 
   <script>
     $(function () {
@@ -29,7 +29,7 @@
   <div id="left" style="width:15%; height:500px; float:left;">
     <table align="left" width="85%" border="0" cellpadding="0" cellspacing="0">
       <left>
-        <ul id="leftmenu"><br><br>考试系统<li><a href="#">主页</a></li>
+        <ul id="leftmenu"><br><br>考试系统<li><a href="index">主页</a></li>
           <li><a href="password">修改密码</a></li>
           <li id="logout"><a href="login">退出</a></li>
         </ul>
