--- a/src/views/login.html
+++ b/src/views/login.html
@@ -44,10 +44,18 @@
             }
             else if (data.role == 'teacher') {
               // 老师来了
-              localStorage.setItem('username', username);
-              localStorage.setItem('role', 'teacher');
-              console.log("跳转到server端, 老师正确登录");
-              $(location).attr("href", "index");
+              if (data.firstLogin == true) {
+                localStorage.setItem('username', username);
+                localStorage.setItem('role', 'teacher');
+                console.log("跳转到密码修改界面");
+                $(location).attr("href", "password");
+              }
+              else {
+                localStorage.setItem('username', username);
+                localStorage.setItem('role', 'teacher');
+                console.log("跳转到server端, 老师正确登录");
+                $(location).attr("href", "index");
+              }
             }
             else {
               // 学生来了
