--- a/src/views/password1.html
+++ b/src/views/password1.html
@@ -52,7 +52,7 @@
         return;
       }
       $.ajax({
-        url: "http://localhost:3000/changePassword",
+        url: "http://43.142.102.170:3000/changePassword",
         type: "post",
         contentType: 'application/json',
         data: JSON.stringify({
