--- a/src/views/password2.html
+++ b/src/views/password2.html
@@ -20,7 +20,7 @@
       $("#logout").click(function () {
         localStorage.clear();
         $.ajax({
-          url: "http://localhost:3000/getLogout",
+          url: "http://43.142.102.170:3000/getLogout",
           type: "get",
           contentType: 'application/json'
         })
@@ -60,7 +60,7 @@
         return;
       }
       $.ajax({
-        url: "http://localhost:3000/changePassword",
+        url: "http://43.142.102.170:3000/changePassword",
         type: "post",
         contentType: 'application/json',
         data: JSON.stringify({
