--- a/src/views/server.html
+++ b/src/views/server.html
@@ -15,7 +15,7 @@
       const urlParams = new URLSearchParams(window.location.search);
       const stu = (urlParams.get('stu_no') != null) ? urlParams.get('stu_no') : '1234567';
       $.ajax({
-        url: "http://localhost:3000/getInfo",
+        url: "http://43.142.102.170:3000/getInfo",
         type: "get",
         contentType: 'application/json',
         data: {
@@ -32,7 +32,7 @@
         }
       });
       $.ajax({
-        url: "http://localhost:3000/getInfo",
+        url: "http://43.142.102.170:3000/getInfo",
         type: "get",
         contentType: 'application/json',
         data: {
@@ -48,7 +48,7 @@
       $("#logout").click(function () {
         localStorage.clear();
         $.ajax({
-          url: "http://localhost:3000/getLogout",
+          url: "http://43.142.102.170:3000/getLogout",
           type: "get",
         })
       })
