--- a/src/views/teacher.html
+++ b/src/views/teacher.html
@@ -37,13 +37,13 @@
       $("#logout").click(function () {
         localStorage.clear();
         $.ajax({
-          url: "http://localhost:3000/getLogout",
+          url: "http://43.142.102.170:3000/getLogout",
           type: "get",
         })
       })
 
       $.ajax({
-        url: "http://localhost:3000/getAllStu",
+        url: "http://43.142.102.170:3000/getAllStu",
         type: "get",
         contentType: 'application/json',
         success: function (data) {
@@ -53,7 +53,7 @@
             let my_tr = $("<tr></tr>");
             let my_td1 = $("<td>" + data[i].stu_no + "</td>");
             let my_td2 = $("<td>" + data[i].stu_name + "</td>");
-            let my_td3 = $("<td id='" + data[i].stu_no + "'>未连接</td>");
+            let my_td3 = $("<td id='" + data[i].stu_no + "'>connected</td>");
             let my_td4 = $("<td><a href='invigilation?stu_no=" + data[i].stu_no + "'>查看详情</a></td>")
             my_td1.appendTo(my_tr);
             my_td2.appendTo(my_tr);
@@ -66,7 +66,7 @@
     })
   </script>
 </head>
-<a href=""></a>
+
 <body>
   <div id="left" style="width:15%; height:500px; float:left;">
     <table align="left" width="85%" border="0" cellpadding="0" cellspacing="0">
@@ -89,7 +89,7 @@
       </tr>
     </table>
   </div>
-  <script src="webrtc/teacher.js" charset="GBK"></script>
+  <script src="webrtc/teacher.js"></script>
 </body>
 
 </html>
