--- a/src/views/password1.html
+++ b/src/views/password1.html
@@ -60,6 +60,10 @@
           oldpassword: oldpassword,
           newpassword: newpassword1
         }),
+        xhrFields: {
+          withCredentials: true
+        },
+        crossDomain: true,
         success: function (data) {
           console.log(data);
           if (data.msg == 'success') {
