--- a/src/views/password2.html
+++ b/src/views/password2.html
@@ -22,7 +22,12 @@
         $.ajax({
           url: "http://43.142.102.170:3000/getLogout",
           type: "get",
-          contentType: 'application/json'
+          contentType: 'application/json',
+          xhrFields: {
+            withCredentials: true
+          },
+          crossDomain: true,
+
         })
       })
     })
@@ -68,6 +73,10 @@
           oldpassword: oldpassword,
           newpassword: newpassword1
         }),
+        xhrFields: {
+          withCredentials: true
+        },
+        crossDomain: true,
         success: function (data) {
           console.log(data);
           if (data.msg == 'success') {
