--- a/src/views/server.html
+++ b/src/views/server.html
@@ -21,6 +21,10 @@
         data: {
           stu_no: stu,
         },
+        xhrFields: {
+          withCredentials: true
+        },
+        crossDomain: true,
         success: function (data) {
           console.log(data);
           let info = "开课年级:" + data.stu_grade + '\xa0\xa0\xa0\xa0\xa0\xa0\xa0';
@@ -38,6 +42,10 @@
         data: {
           stu_no: localStorage.getItem('username'),
         },
+        xhrFields: {
+          withCredentials: true
+        },
+        crossDomain: true,
         success: function (data) {
           console.log(data);
           let info = '监考人:' + data.stu_name + '\xa0\xa0\xa0\xa0\xa0\xa0\xa0';
@@ -50,6 +58,10 @@
         $.ajax({
           url: "http://43.142.102.170:3000/getLogout",
           type: "get",
+          xhrFields: {
+            withCredentials: true
+          },
+          crossDomain: true,
         })
       })
     });
