学生开启录屏

--- a/src/views/teacher.html
+++ b/src/views/teacher.html
@@ -53,12 +53,14 @@
             let my_tr = $("<tr></tr>");
             let my_td1 = $("<td>" + data[i].stu_no + "</td>");
             let my_td2 = $("<td>" + data[i].stu_name + "</td>");
-            let my_td3 = $("<td id='" + data[i].stu_no + "'>未连接</td>");
-            let my_td4 = $("<td><a href='invigilation?stu_no=" + data[i].stu_no + "'>查看详情</a></td>")
+            let my_td3 = $("<td style='color:red' id='v" + data[i].stu_no + "'>disconnect</td>");
+            let my_td4 = $("<td style='color:red' id='s" + data[i].stu_no + "'>disconnect</td>");
+            let my_td5 = $("<td><a href='invigilation?stu_no=" + data[i].stu_no + "'>查看详情</a></td>")
             my_td1.appendTo(my_tr);
             my_td2.appendTo(my_tr);
             my_td3.appendTo(my_tr);
             my_td4.appendTo(my_tr);
+            my_td5.appendTo(my_tr);
             my_tr.appendTo(my_table);
           }
         }
@@ -84,8 +86,9 @@
       <tr>
         <th>学号</th>
         <th>姓名</th>
-        <th>连接状态</th>
-        <th>学生监考</th>
+        <th>视频状态</th>
+        <th>录屏状态</th>
+        <th>实时监控</th>
       </tr>
     </table>
   </div>
