--- a/src/views/server.html
+++ b/src/views/server.html
@@ -5,7 +5,7 @@
   <meta charset="gbk">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>主页</title>
+  <title>视频查看</title>
   <script type="text/javascript" src="libs/jquery.js"></script>
   <style type="text/css">
     video {
@@ -89,10 +89,10 @@
 
       <tr style="height:400px">
         <td>
-          <video id="remoteVideo" controls autoplay></video>
+          <video id="remoteVideo" controls autoplay muted></video>
         </td>
         <td>
-          <video id="remoteScreen" controls autoplay></video>
+          <video id="remoteScreen" controls autoplay muted></video>
         </td>
       </tr>
     </table>
