--- a/src/views/password1.html
+++ b/src/views/password1.html
@@ -16,7 +16,7 @@
   <script>
     $(function () {
       console.log("首次登录页面");
-      $('#username').text(localStorage.getItem('username'));
+      $('#stu_no').text(localStorage.getItem('stu_no'));
     })
 
     function change() {
@@ -56,7 +56,7 @@
         type: "post",
         contentType: 'application/json',
         data: JSON.stringify({
-          stu_no: localStorage.getItem("username"),
+          stu_no: localStorage.getItem("stu_no"),
           oldpassword: oldpassword,
           newpassword: newpassword1
         }),
@@ -88,7 +88,7 @@
     <table align="center" width="280" border="1" cellpadding="2" cellspacing="0">
       <tr>
         <td>&nbsp用户名: </td>
-        <td id="username"></td>
+        <td id="stu_no"></td>
       </tr>
       <tr>
         <td>*旧密码：</td>
