--- a/src/views/password2.html
+++ b/src/views/password2.html
@@ -22,7 +22,7 @@
         $.ajax({
           url: "http://localhost:3000/getLogout",
           type: "get",
-          contentType: 'application/json'
+          contentType: 'application/json',
         })
       })
     })
