--- a/src/views/client.html
+++ b/src/views/client.html
@@ -22,7 +22,7 @@
       $('#end1').attr('disabled', true);
       $('#end2').attr('disabled', true);
       $.ajax({
-        url: "http://43.142.102.170:3000/getInfo",
+        url: "https://43.142.102.170/getInfo",
         type: "get",
         contentType: 'application/json',
         data: {
@@ -89,7 +89,7 @@
       $("#logout").click(function () {
         localStorage.clear();
         $.ajax({
-          url: "http://43.142.102.170:3000/getLogout",
+          url: "https://43.142.102.170/getLogout",
           type: "get",
           xhrFields: {
             withCredentials: true
