--- a/src/views/login.html
+++ b/src/views/login.html
@@ -29,7 +29,7 @@
       }
       else {
         $.ajax({
-          url: "http://43.142.102.170:3000/getLogin",
+          url: "https://43.142.102.170/getLogin",
           type: "post",
           contentType: 'application/json',
           data: JSON.stringify({
