--- a/src/views/teacher.html
+++ b/src/views/teacher.html
@@ -35,13 +35,13 @@
       $("#logout").click(function () {
         localStorage.clear();
         $.ajax({
-          url: "http://43.142.102.170:3000/getLogout",
+          url: "https://43.142.102.170/getLogout",
           type: "get",
         })
       })
 
       $.ajax({
-        url: "http://43.142.102.170:3000/getAllStu",
+        url: "https://43.142.102.170/getAllStu",
         type: "get",
         contentType: 'application/json',
         success: function (data) {
