--- a/src/views/password2.html
+++ b/src/views/password2.html
@@ -23,6 +23,10 @@
           url: "http://localhost:3000/getLogout",
           type: "get",
           contentType: 'application/json',
+          xhrFields: {
+            withCredentials: true
+          },
+          crossDomain: true,
         })
       })
     })
@@ -68,6 +72,10 @@
           oldpassword: oldpassword,
           newpassword: newpassword1
         }),
+        xhrFields: {
+          withCredentials: true
+        },
+        crossDomain: true,
         success: function (data) {
           console.log(data);
           if (data.msg == 'success') {
