--- a/src/views/teacher.html
+++ b/src/views/teacher.html
@@ -37,6 +37,10 @@
         $.ajax({
           url: "http://localhost:3000/getLogout",
           type: "get",
+          xhrFields: {
+            withCredentials: true
+          },
+          crossDomain: true,
         })
       })
 
@@ -44,6 +48,10 @@
         url: "http://localhost:3000/getAllStu",
         type: "get",
         contentType: 'application/json',
+        xhrFields: {
+          withCredentials: true
+        },
+        crossDomain: true,
         success: function (data) {
           console.log(data);
           my_table = $('#student')
