--- a/src/views/client.html
+++ b/src/views/client.html
@@ -103,7 +103,7 @@
 </head>
 
 <body>
-  <div id="left" style="width:15%; height:500px; float:left;">
+  <div id="left" style="width:10%; height:500px; float:left;">
     <table align="left" width="85%" border="0" cellpadding="0" cellspacing="0">
       <left>
         <ul id="leftmenu"><br><br>考试系统<li><a href="index">主页</a></li>
@@ -113,7 +113,7 @@
       </left>
     </table>
   </div>
-  <div id="main">
+  <div id="main" style="float: left;">
     <h1 style="margin-left: 46%">视频监考</h1>
     <table border="1" width="70%" style="text-align:center">
       <tr>
